--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -62,9 +62,9 @@ const bottomLinks = [
             <div class="flex max-w-sm flex-col gap-6 sm:gap-8">
                 <p
                     class="text-balance text-center text-sm text-primary-950/70 dark:text-primary-200/70 sm:text-start">
-                    Sambataro Arquitectos es un estudio de arquitectura con más de 30 años de
-                    experiencia en el diseño y construcción de teatros y auditorios en todo el
-                    mundo.
+                    Sambataro Arquitectos, estudio de arquitectura con más de 40 años de
+                    experiencia en asesoría esceno-técnica y maquinaria escénica de mantenimiento
+                    preventivo y correctivo.
                 </p>
                 <p class="text-sm text-primary-950/70 dark:text-primary-200/70">
                     © 2025 - <span class="font-semibold">Sambataro Arquitectos</span>
