--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,12 @@ const texts = [
     <IndexPublicationsComponent />
     <!-- <Expertise /> -->
     <!-- <Testimonials /> -->
-    <Cta />
-    <Footer />
+    <Cta
+        title="Construyendo el futuro"
+        description="En Sambataro Arquitectos estamos comprometidos con la calidad y la innovación en cada uno de nuestros proyectos."
+        anchor="Contactanos"
+    />
+    <Footer
+        description="Sambataro Arquitectos, estudio de arquitectura con más de 40 años de experiencia en asesoría esceno-técnica y maquinaria escénica de mantenimiento'preventivo y correctivo."
+    />
 </Layout>
