Agregar traducciones al inglés para las secciones de noticias, contacto y sobre nosotros, junto con la creación de un nuevo formulario de contacto en inglés y mejoras en la presentación del equipo.

--- a/src/components/contact/ContactInfo.astro
+++ b/src/components/contact/ContactInfo.astro
@@ -8,7 +8,7 @@
             <!-- Address -->
             <div
                 class="rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-400/10 dark:bg-primary-900">
-                <dt class="sr-only">Domicilio</dt>
+                <dt class="sr-only">Address</dt>
                 <dd class="flex h-full flex-col justify-start gap-12">
                     <svg
                         class="h-6 w-6 text-primary-600 dark:text-primary-400"
@@ -35,7 +35,7 @@
             <!-- Phone number -->
             <div
                 class="rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-400/10 dark:bg-primary-900">
-                <dt class="sr-only">Teléfono</dt>
+                <dt class="sr-only">Phone</dt>
                 <dd class="flex h-full flex-col justify-start gap-12">
                     <svg
                         class="h-6 w-6 text-primary-600 dark:text-primary-400"
