--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,14 @@ import Footer from '../components/layout/Footer.astro';
 
 <Layout description="" title="Nosotros">
     <Header id="top" />
-    <Mission />
+    <Mission
+        title="Estudio"
+        paragraph1="Nuestro equipo incluye expertos en el desarrollo de planificación, patrimonio, arquitectura teatral, escenotecnia y diseño de escenografías para ópera. Además, contamos con especialistas en ingeniería escénica, estructural y mecánica; acústica, iluminación escénica, sonido y video. Tenemos experiencia en operación de teatros, por lo tanto, entendemos las necesidades artísticas, operacionales, técnicas y comerciales de todo tipo de salas de espectáculos, áreas de apoyo y edificios complementarios."
+        subtitle="Historia"
+        paragraph2="Desde nuestro comienzo en 1987, trabajamos en más de 40 proyectos en 8 países- teatros, centros culturales, escenografías, salas líricas, de prosa, concert halls, auditorios, arenas, etc. – Sin importar el tamaño del proyecto, volcamos nuestra experiencia para crear espacios innovadores, flexibles, y eficientes."
+        paragraph3="En 1987, el escenógrafo Enrique Bordolini junto con arquitecto Alfio Sambataro, desarrollaron el proyecto escenotécnico en el destacado Teatro Colón de Buenos Aires, donde se remodeló por completo su caja escénica. Trabajando tanto en América como en Europa, crecieron y fueron pioneros en el asesoramiento escenotécnico en Latinoamérica, en proyectos de gran envergadura. A partir del 2012, tras 30 años de trayectoria, el estudio se estableció e integró nuevos profesionales como la arquitecta Agostina Sambataro, incorporándose a nuevos proyectos."
+        paragraph=" En la última década el estudio se consolidó como uno de los pocos referentes regionales de la especialización. Actualmente tenemos un equipo conformado por profesionales argentinos y chilenos; arquitectos, ingenieros, diseñadores y técnicos, apasionados por hacer edificios contenedores de arte funcionales a la audiencia, artistas y técnicos por igual."
+    />
     <Values />
     <Team />
     <Footer />
