--- a/src/pages/en/contact.astro
+++ b/src/pages/en/contact.astro
@@ -1,16 +1,16 @@
 ---
-import ContactForm from '../components/contact/ContactForm.astro';
-import ContactInfo from '../components/contact/ContactInfo.astro';
-import Footer from '../components/layout/Footer.astro';
-import Header from '../components/layout/Header.astro';
-import Layout from '../layouts/Layout.astro';
-import Heading from '../components/about/Heading.astro';
+import ContactFormEng from '../../components/contact/ContactFormEng.astro';
+import ContactInfo from '../../components/contact/ContactInfo.astro';
+import Footer from '../../components/layout/Footer.astro';
+import Header from '../../components/layout/Header.astro';
+import Layout from '../../layouts/Layout.astro';
+import Heading from '../../components/about/Heading.astro';
 ---
 
-<Layout description="" title="Contacto">
+<Layout description="" title="Contact">
     <Header />
-    <Heading title="Contacto" subtitle="Contactanos para más información" />
+    <Heading title="Contact" subtitle="Contact us for more information" />
     <ContactInfo />
-    <ContactForm />
+    <ContactFormEng />
     <Footer />
 </Layout>
