--- a/src/pages/en/news.astro
+++ b/src/pages/en/news.astro
@@ -4,7 +4,7 @@ import Base from '../../layouts/Base.astro';
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout description="" title="Noticias">
+<Layout description="" title="News">
     <Base>
         <NewsComponentEng />
     </Base>
