--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -20,6 +20,18 @@ const stats = [
         value: "'5'",
     },
 ];
+
+interface MissionProps {
+    title: string;
+    paragraph1: string;
+    subtitle: string;
+    paragraph2: string;
+    paragraph3: string;
+    paragraph4: string;
+}
+
+const { title, paragraph1, subtitle, paragraph2, paragraph3, paragraph4 } =
+    Astro.props as MissionProps;
 ---
 
 <section class="py-16 sm:py-20">
@@ -33,16 +45,10 @@ const stats = [
                     src={theater}
                     alt="Our experts working together"
                 />
-                <h2 class="py-8 text-3xl font-medium tracking-tight sm:text-4xl">Estudio</h2>
+                <h2 class="py-8 text-3xl font-medium tracking-tight sm:text-4xl">{title}</h2>
                 <div class="space-y-6">
                     <p class="text-sm text-primary-950/70 dark:text-primary-200/70 lg:text-base">
-                        Nuestro equipo incluye expertos en el desarrollo de planificación,
-                        patrimonio, arquitectura teatral, escenotecnia y diseño de escenografías
-                        para ópera. Además, contamos con especialistas en ingeniería escénica,
-                        estructural y mecánica; acústica, iluminación escénica, sonido y video.
-                        Tenemos experiencia en operación de teatros, por lo tanto, entendemos las
-                        necesidades artísticas, operacionales, técnicas y comerciales de todo tipo
-                        de salas de espectáculos, áreas de apoyo y edificios complementarios.
+                        {paragraph1}
                     </p>
                 </div>
             </div>
@@ -50,36 +56,19 @@ const stats = [
             <div class="flex flex-col gap-10">
                 <!-- Mission description -->
                 <div class="space-y-8 sm:space-y-12">
-                    <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Historia</h2>
+                    <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">{subtitle}</h2>
                     <div class="space-y-6">
                         <p
                             class="text-sm text-primary-950/70 dark:text-primary-200/70 lg:text-base">
-                            Desde nuestro comienzo en 1987, trabajamos en más de 40 proyectos en 8
-                            países- teatros, centros culturales, escenografías, salas líricas, de
-                            prosa, concert halls, auditorios, arenas, etc. – Sin importar el tamaño
-                            del proyecto, volcamos nuestra experiencia para crear espacios
-                            innovadores, flexibles, y eficientes.
+                            {paragraph2}
                         </p>
                         <p
                             class="text-sm text-primary-950/70 dark:text-primary-200/70 lg:text-base">
-                            En 1987, el escenógrafo Enrique Bordolini junto con arquitecto Alfio
-                            Sambataro, desarrollaron el proyecto escenotécnico en el destacado
-                            Teatro Colón de Buenos Aires, donde se remodeló por completo su caja
-                            escénica. Trabajando tanto en América como en Europa, crecieron y fueron
-                            pioneros en el asesoramiento escenotécnico en Latinoamérica, en
-                            proyectos de gran envergadura. A partir del 2012, tras 30 años de
-                            trayectoria, el estudio se estableció e integró nuevos profesionales
-                            como la arquitecta Agostina Sambataro, incorporándose a nuevos
-                            proyectos.
+                            {paragraph3}
                         </p>
                         <p
                             class="text-sm text-primary-950/70 dark:text-primary-200/70 lg:text-base">
-                            En la última década el estudio se consolidó como uno de los pocos
-                            referentes regionales de la especialización. Actualmente tenemos un
-                            equipo conformado por profesionales argentinos y chilenos; arquitectos,
-                            ingenieros, diseñadores y técnicos, apasionados por hacer edificios
-                            contenedores de arte funcionales a la audiencia, artistas y técnicos por
-                            igual.
+                            {paragraph4}
                         </p>
                     </div>
                 </div>
