--- a/src/components/about/TeamEng.astro
+++ b/src/components/about/TeamEng.astro
@@ -3,68 +3,68 @@ const team = [
     {
         name: 'Alfio Sambataro',
         image: '/assets/alfio.avif',
-        job: 'Arquitecto - Socio Fundador',
+        job: 'Architect - Founding Partner',
         mini_description:
-            'Arquitecto titulado en La Universidad de Buenos Aires en 1981, ha trabajado desde sus comienzos, hasta la fecha, en el diseño de salas de espectáculos y efectuando el diseño técnico de las escenografías para óperas y ballet en importantes producciones tanto en teatros de América como de Europa.',
+            'Architect graduated from the University of Buenos Aires in 1981, has worked since his beginnings, to date, in the design of performance venues and carrying out the technical design of scenography for operas and ballet in important productions in theaters in America and Europe.',
         full_description:
-            ' Arquitecto titulado en La Universidad de Buenos Aires en 1981, ha trabajado desde sus comienzos, hasta la fecha, en el diseño de salas de espectáculos y efectuando la ingeniería constructiva de las escenografías para óperas y ballet en importantes producciones tanto en teatros de América como de Europa. Como hito que marca el comienzo de una larga trayectoria de más de treinta años en el ámbito de la arquitectura teatral, se destaca el proyecto de remodelación, modernización y equipamiento, de la caja escénica del Teatro Colón de Buenos Aires, realizado en el año 1987, con Enrique Bordolini. Posteriormente trabajó en los proyectos del Teatro Argentino de La Plata, Provincia de Buenos Aires, desarrollado en el año 1999 y el anteproyecto de oferta licitatoria del Palau de les Arts, Reina Sofia en la Ciudad de las Artes y las Ciencias de Valencia, España. Su carrera dentro de esta especialidad siguió expandiéndose participando en proyectos a nivel internacional tales como, The Kimmel Center for the Performing Arts de Filadelfia, Estados Unidos; The Eastman Theater en Rochester de Nueva York; el Teatro Municipal de Santiago de Chile; el Teatro Municipal Ignacio Pane de Asunción, Paraguay entre otros. La temática abordada abarca además de la escenotecnia, la refuncionalización de edificios culturales históricos, tarea desarrollada en conjunto con especialistas de restauración arquitectónica. Dentro de este tópico produjo proyectos tales como el Teatro Martín Fierro de La Plata; el Centro Cultural Recoleta en la Ciudad Autónoma de Buenos Aires, El Centro Cultural Casa Lo Matta, en Vitacura, Chile y La Escuela de Ballet del Teatro Municipal de Santiago de Chile, entre otros. También abarcó su actividad como asesor escenotécnico la realización de nuevas salas para espectáculos y eventos de mediana y gran envergadura, tales como el Centro Cultural Gabriela Mistral, de Santiago de Chile; Teatro Bellas Artes de Bogotá; Arena de Santiago; Teatro del Lago en Frutillar, ambos en Chile, entre otros. Con Enrique Bordolini desarrollaron desde hace más de 30 años la dirección y producción técnica de grandes eventos al aire libre, para entidades tanto públicas como privadas.',
+            'Architect graduated from the University of Buenos Aires in 1981, has worked since his beginnings, to date, in the design of performance venues and carrying out the constructive engineering of scenography for operas and ballet in important productions in theaters in America and Europe. As a milestone that marks the beginning of a long career of more than thirty years in the field of theater architecture, the remodeling, modernization and equipment project of the stage house of the Teatro Colón in Buenos Aires, carried out in 1987 with Enrique Bordolini, stands out. He later worked on the projects of the Teatro Argentino de La Plata, Province of Buenos Aires, developed in 1999 and the preliminary draft of the tender offer of the Palau de les Arts, Reina Sofia in the City of Arts and Sciences of Valencia, Spain. His career within this specialty continued to expand, participating in international projects such as The Kimmel Center for the Performing Arts in Philadelphia, United States; The Eastman Theater in Rochester, New York; the Municipal Theater of Santiago de Chile; the Ignacio Pane Municipal Theater of Asunción, Paraguay, among others. The subject addressed covers, in addition to stage technology, the repurposing of historical cultural buildings, a task developed in conjunction with architectural restoration specialists. Within this topic, he produced projects such as the Teatro Martín Fierro de La Plata; the Recoleta Cultural Center in the Autonomous City of Buenos Aires, the Casa Lo Matta Cultural Center, in Vitacura, Chile and the Ballet School of the Municipal Theater of Santiago de Chile, among others. His activity as a stage technology consultant also included the creation of new venues for medium and large-scale shows and events, such as the Gabriela Mistral Cultural Center, in Santiago de Chile; Teatro Bellas Artes in Bogotá; Arena de Santiago; Teatro del Lago in Frutillar, both in Chile, among others. With Enrique Bordolini, they have been developing the technical direction and production of large outdoor events for public and private entities for more than 30 years.',
         email: 'alfiosambataro@sambataroarquitectos.com',
     },
     {
         name: 'Enrique Bordolini',
         image: '/assets/enrique.avif',
-        job: 'Escenógrafo - Socio Fundador',
+        job: 'Set Designer - Founding Partner',
         mini_description:
-            'Escenógrafo, director General Escenotécnico del Teatro Colón de buenos Aires 1950-2024. e formó en el ISATC donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y fue Director de Producción Escénica',
+            'Set designer, General Stage Technology Director of the Teatro Colón de Buenos Aires 1950-2024. He trained at ISATC where he was responsible for the design of lighting systems (1979), directed the scenic modernization project (1989) and was Director of Scenic Production. He was Technical Director of the Argentino de la Plata and Municipal de Santiago de Chile theaters and Stage Technology Director of the Teatro Colón (1998).',
         full_description:
-            'Se formó en el ISATC donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y fue Director de Producción Escénica. Fue Director Técnico de los teatros Argentino de la Plata, Municipal de Santiago de Chile y Director Escenotécnico del Teatro Colón (1998). Realizó el diseño escenográfico de óperas como La Traviata, Le cantatrice villane, El barbero de Sevilla, El elixir del amor, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La bohème, Lucia di Lammermoor, Fedora, Attila, Die Soldaten y Julio César en prestigiosos teatros de América, Europa y Medio Oriente. En 2016 asumió nuevamente la Dirección de Producción Escenotécnica del Argentino de La Plata. En 2019 asume nuevamente la Dirección General Escenotécnica del Teatro Colón de Buenos Aires.',
+            'He trained at ISATC where he was responsible for the design of lighting systems (1979), directed the scenic modernization project (1989) and was Director of Scenic Production. He was Technical Director of the Argentino de la Plata and Municipal de Santiago de Chile theaters and Stage Technology Director of the Teatro Colón (1998). He created the scenographic design of operas such as La Traviata, Le cantatrice villane, The Barber of Seville, The Elixir of Love, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La bohème, Lucia di Lammermoor, Fedora, Attila, Die Soldaten and Julius Caesar in prestigious theaters in America, Europe and the Middle East. In 2016 he once again assumed the Direction of Scenic Production Technology of the Argentino de La Plata. In 2019 he once again assumes the General Direction of Scenic Technology of the Teatro Colón in Buenos Aires.',
         email: 'enriquebordolini@sambataroarquitectos.com',
     },
     {
         name: 'Agostina Sambataro',
         image: '/assets/agostina.avif',
-        job: 'Architecta - Socia Co-Fundadora',
+        job: 'Architect - Co-Founding Partner',
         mini_description:
-            'Desde su egreso de la Universidad de Buenos Aires en el año 2013 en el cual fue distinguida por su destacada labor y desempeño académico, ha acumulado experiencia en diversas áreas de la arquitectura, tanto nacional como internacionalmente, orientándose hacia el ámbito de la educación y la cultura.',
+            'Since graduating from the University of Buenos Aires in 2013, in which she was distinguished for her outstanding work and academic performance, she has accumulated experience in various areas of architecture, both nationally and internationally, focusing on the field of education and culture.',
         full_description:
-            'Desde su egreso de la Universidad de Buenos Aires en el año 2013 en el cual fue distinguida con el “Diploma por su destacada labor y desempeño académico, reconocida por entidades públicas y privadas externas al ámbito de la Universidad”, ha acumulado experiencia en diversas áreas de la arquitectura, tanto nacional como internacionalmente orientándose hacia el ámbito educacional y cultural. Aun siendo estudiante - luego de su experiencia laboral en Estados Unidos y académica en Alemania y Nueva Zelanda - comenzó su carrera en arquitectura en Santiago de Chile en el estudio Amercanda junto al arquitecto Bernd Haller. Más adelante trabajó en el proyecto de edificio de viviendas BMC y Aula Magna de la Universidad de Quilmes en el estudio Faivre en Buenos Aires. Participó también en concursos de arquitectura tanto nacionales como internacionales, obteniendo el primer lugar en dos ocasiones, incluyendo el “Premio Clarín-SCA para estudiantes de arquitectura”. En el año 2015 se trasladó a la ciudad de Colonia, Alemania para formar parte del equipo de arquitectos del estudio v-architekten, en donde obtuvo el primer lugar como resultado del concurso para la Escuela técnica del ejército de la República Federal de Alemania en Karlsruhe, colaborando también en los proyectos de la Escuela primaria Berkersheim en Frankfurt y Centro Parroquial Langenfeld. De regreso en Buenos Aires se asoció al estudio Sambataro Arquitectos, en el cual se desempeña actualmente, especializándose en el ámbito de la arquitectura teatral y la escenotecnia. En dicho aspecto, ha trabajado para prestigiosas instituciones como el Centro Cultural Recoleta, Teatro Coliseo de la Fundación Cultural Coliseum, Teatro Argentino de La Plata, Teatro Colón, Teatro Tronador de Mar del Plata, Teatro Martín Fierro de La Plata, Teatro del Libertador General San Martin de Córdoba y Teatro Príncipe de Gales de Santiago de Chile, entre otros; desempeñándose tanto en la supervisión de obra como en el desarrollo de proyectos licitatorios y ejecutivos. Participó en cursos de especialización dictados por Graduate School of Design of the University of Harvard, Argentina Green Building Council y American Institute of Architects de Washington DC. Sus trabajos y artículos han sido publicados en revistas, canales televisivos y plataformas de arquitectura como Revista Summa, ARQ Clarín, Canal (á), D&D, Plataforma arquitectura y ArchDaily.',
+            'Since graduating from the University of Buenos Aires in 2013, in which she was distinguished with the "Diploma for her outstanding work and academic performance, recognized by public and private entities outside the University," she has accumulated experience in various areas of architecture, both nationally and internationally, focusing on the educational and cultural field. Even as a student - after her work experience in the United States and academic experience in Germany and New Zealand - she began her career in architecture in Santiago de Chile at the Amercanda studio with architect Bernd Haller. Later she worked on the BMC housing building project and Aula Magna of the University of Quilmes at the Faivre studio in Buenos Aires. She also participated in national and international architecture competitions, obtaining first place on two occasions, including the "Clarín-SCA Award for architecture students." In 2015 she moved to the city of Cologne, Germany to join the team of architects at the v-architekten studio, where she obtained first place as a result of the competition for the technical school of the army of the Federal Republic of Germany in Karlsruhe, also collaborating on the projects of the Berkersheim primary school in Frankfurt and the Langenfeld Parish Center. Back in Buenos Aires, she joined the Sambataro Arquitectos studio, where she currently works, specializing in the field of theater architecture and stage technology. In this regard, she has worked for prestigious institutions such as the Recoleta Cultural Center, Coliseo Theater of the Coliseum Cultural Foundation, Argentino de La Plata Theater, Colón Theater, Tronador Theater of Mar del Plata, Martín Fierro Theater of La Plata, Libertador General San Martin Theater of Córdoba and Príncipe de Gales Theater of Santiago de Chile, among others; working both in the supervision of work and in the development of bidding and executive projects. She participated in specialization courses taught by the Graduate School of Design of the University of Harvard, Argentina Green Building Council and American Institute of Architects of Washington DC. Her works and articles have been published in magazines, television channels and architecture platforms such as Summa Magazine, ARQ Clarín, Canal (á), D&D, Plataforma arquitectura and ArchDaily.',
         email: 'agostinasambataro@sambataroarquitectos.com',
     },
 ];
 
 const team2 = [
     {
-        position: 'Escenotecnia',
+        position: 'Stage Technology',
         name1: 'Enrique Bordolini',
-        name2: 'Arq. Alfio Sambataro',
+        name2: 'Architect Alfio Sambataro',
     },
     {
-        position: 'Arquitectura teatral',
-        name1: 'Arq. Agostina Sambataro',
+        position: 'Theater Architecture',
+        name1: 'Architect Agostina Sambataro',
         name2: '',
     },
     {
-        position: 'Iluminación escénica',
+        position: 'Stage Lighting',
         name1: 'Enrique Bordolini',
         name2: '',
     },
     {
-        position: 'Patrimonio y restauración',
-        name1: 'Arq. Andrés Cumsille C.',
+        position: 'Heritage and Restoration',
+        name1: 'Architect Andrés Cumsille C.',
         name2: '',
     },
     {
-        position: 'Ingeniería estructural y mecánica',
-        name1: 'Ing. Juan Antonio Vargas',
+        position: 'Structural and Mechanical Engineering',
+        name1: 'Engineer Juan Antonio Vargas',
         name2: '',
     },
     {
-        position: 'Ingeniería acústica',
-        name1: 'Ing. Jorge Sommerhoff',
+        position: 'Acoustic Engineering',
+        name1: 'Engineer Jorge Sommerhoff',
         name2: '',
     },
     {
-        position: 'Sonido y video',
+        position: 'Sound and Video',
         name1: 'Jorge Cárdena',
         name2: '',
     },
@@ -74,12 +74,12 @@ const team2 = [
 <section class="py-16 sm:py-20">
     <div class="relative mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="sm:space-8 space-y-12">
-            <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Conoce nuestro equipo</h2>
+            <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Know our team</h2>
             <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
                 {
                     team.map((item, index) => (
                         <li class=" rounded-xl border  border-primary-900/10 bg-primary-200/50 p-2 px-2 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900  lg:px-6">
-                            <div class="h-full space-y-6">
+                            <div class="space-y-6">
                                 <img
                                     class="mx-auto h-40 w-40 rounded-full object-cover"
                                     src={item.image}
@@ -90,14 +90,14 @@ const team2 = [
                                     <p class="pb-2 text-base font-semibold text-primary-950/70 dark:text-primary-200/70">
                                         {item.job}
                                     </p>
-                                    <p class="text-balance text-xs text-primary-950/70 dark:text-primary-200/70 lg:text-sm ">
+                                    <p class="text-balance text-xs text-primary-950/70 dark:text-primary-200/70 lg:text-sm">
                                         {item.mini_description}
                                     </p>
                                 </div>
                                 <button
                                     class="open-dialog-button dark:hover-bg-primary-700 flex w-full items-center justify-center rounded-xl bg-primary-100 px-6 py-4 text-sm font-normal text-primary-700 shadow transition-all hover:text-primary-800 hover:shadow-md focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-1 focus-visible:outline-primary-500 active:scale-95 dark:border-primary-700 dark:bg-primary-800 dark:text-primary-200 dark:hover:bg-primary-700 dark:hover:text-primary-100 dark:focus-visible:outline-primary-400"
                                     data-index={index}>
-                                    Ver más
+                                    View more
                                 </button>
                                 {/* Dialog que se abrirá al hacer click */}
                                 <dialog
