--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,16 +1,23 @@
 ---
-import Mission from '../components/about/Mission.astro';
-import Team from '../components/about/Team.astro';
-import Values from '../components/about/Values.astro';
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/layout/Header.astro';
-import Footer from '../components/layout/Footer.astro';
+import Mission from '../../components/about/Mission.astro';
+import TeamEng from '../../components/about/TeamEng.astro';
+import Layout from '../../layouts/Layout.astro';
+import Header from '../../components/layout/Header.astro';
+import Footer from '../../components/layout/Footer.astro';
+import ValuesEng from '../../components/about/ValuesEng.astro';
 ---
 
-<Layout description="" title="Nosotros">
+<Layout description="" title="About Us">
     <Header id="top" />
-    <Mission />
-    <Values />
-    <Team />
+    <Mission
+        title="Studio"
+        paragraph1="Our team includes experts in development planning, heritage, theater architecture, stagecraft, and set design for opera. In addition, we have specialists in scenic, structural, and mechanical engineering; acoustics, stage lighting, sound, and video. We have experience in theater operation, therefore, we understand the artistic, operational, technical, and commercial needs of all types of performance venues, support areas, and complementary buildings."
+        subtitle="History"
+        paragraph2="Since our beginning in 1987, we have worked on more than 40 projects in 8 countries - theaters, cultural centers, scenography, opera houses, drama theaters, concert halls, auditoriums, arenas, etc. - Regardless of the size of the project, we apply our experience to create innovative, flexible, and efficient spaces."
+        paragraph3="In 1987, set designer Enrique Bordolini, together with architect Alfio Sambataro, developed the stage technology project at the renowned Teatro Colón in Buenos Aires, where its stage house was completely remodeled. Working in both America and Europe, they grew and pioneered stage technology consulting in Latin America, in large-scale projects. Since 2012, after 30 years of experience, the studio was established and integrated new professionals such as architect Agostina Sambataro, joining new projects."
+        paragraph="In the last decade, the studio has consolidated itself as one of the few regional leaders in the specialization. We currently have a team made up of Argentine and Chilean professionals; architects, engineers, designers, and technicians, passionate about creating art container buildings that are functional to the audience, artists, and technicians alike."
+    />
+    <ValuesEng />
+    <TeamEng />
     <Footer />
 </Layout>
